# dftracer-agents

./: .dockerignore  .env  .env.example  .gitignore  .goosehints  .gooseignore  .graphifyignore  .mcp.json  .readthedocs.yaml  CLAUDE.md  LICENSE  README  README.md  SECURITY.md  TODO.md  dftracer_mcp_server.py  docker-compose.yaml  goose_config.yaml  program.md  pyproject.toml  run-pipeline.sh  setup.py
.agents/skills/dftracer-annotate-python/: SKILL.md
.agents/skills/dftracer-annotation-lessons/: SKILL.md
.agents/skills/dftracer-install/: SKILL.md
.agents/skills/dftracer-io-optimization/: SKILL.md
.agents/skills/dftracer-ml-annotate/: SKILL.md
.agents/skills/dftracer-pipeline/: SKILL.md
.agents/skills/dftracer-pitfalls/: SKILL.md
.agents/skills/dftracer-planning/: SKILL.md
.agents/skills/dftracer-preload-run/: SKILL.md
.agents/skills/dftracer-references/: SKILL.md
.agents/skills/dftracer-smoke-test/: SKILL.md
.agents/skills/flux-alloc/: SKILL.md
.agents/skills/system-container/: SKILL.md
.agents/skills/system-tuolumne/: SKILL.md
.agents/skills/workload-h5bench/: SKILL.md
.claude/: .claude.json  settings.json  settings.local.json
.claude/commands/: dftracer-ml-annotate.md  dftracer-pipeline.md  dftracer-preload-run.md  flux-alloc.md  system-detect.md  system-tuolumne.md
.claude/hooks/: guard_rm_drm.sh
.claude/skills/: dftracer-annotate-c  dftracer-annotate-cpp  dftracer-annotate-general  dftracer-annotate-process  dftracer-annotate-python  dftracer-annotation-lessons  dftracer-build-run  dftracer-cheatsheet  dftracer-install  dftracer-io-optimization  dftracer-lessons  dftracer-ml-annotate  dftracer-pipeline  dftracer-pitfalls  dftracer-planning  dftracer-preload-run  dftracer-references  dftracer-smoke-test  dftracer-software-pegasus  dftracer-trace-utils  flux-alloc  software-hdf5  software-mpi  software-posix  system-container  system-detect  system-tuolumne  workload-h5bench  workload-ior
.claude/skills/software-pegasus/: SKILL.md
.claude/worktrees/agent-ad10146d3ed7eb928/: .env.example  README.md  pyproject.toml
.claude/worktrees/agent-ad10146d3ed7eb928/goose/: config.template.yaml
.claude/worktrees/agent-ad10146d3ed7eb928/notebooks/: dftracer_pipeline.ipynb
.claude/worktrees/agent-ad10146d3ed7eb928/scripts/: install.sh  install_dftracer_stack.sh  run_mcp_server.sh  start_agent.sh
.claude/worktrees/agent-ad10146d3ed7eb928/src/dftracer_agents/: __init__.py  agent.py  cli.py  knowledge.py  pipeline.py  workspace.py
.claude/worktrees/agent-ad10146d3ed7eb928/src/dftracer_agents/mcp_servers/: registry.py  server.py
.claude/worktrees/agent-ad10146d3ed7eb928/src/dftracer_agents/mcp_servers/modules/: __init__.py  annotations.py  dfanalyzer.py  dftracer.py  dftracer_utils.py  environment.py  pipeline.py  shared.py
.claude/worktrees/agent-ad10146d3ed7eb928/src/dftracer_agents/notebook/: __init__.py  config.py  pipeline.py  session.py  widgets.py
.claude/worktrees/agent-ad10146d3ed7eb928/tests/: test_annotations.py  test_knowledge.py  test_notebook_pipeline_state.py
.devcontainer/: Dockerfile  devcontainer.json  link-goose-config.sh  postCreate.sh  start-mcp-server.sh
.github/agents/: dftracer-analyzer.agent.md  dftracer-annotate-c.agent.md  dftracer-annotate-cpp.agent.md  dftracer-annotate-python.agent.md  dftracer-annotator.agent.md  dftracer-build-app.agent.md  dftracer-build-dftracer.agent.md  dftracer-build-smoke.agent.md  dftracer-diagnoser.agent.md  dftracer-optimizer.agent.md  dftracer-pipeline-planner.agent.md  dftracer-privacy-guard.agent.md  dftracer-project-router.agent.md  dftracer-report.agent.md  dftracer-session-setup.agent.md  dftracer-system-detect.agent.md  dftracer-tracer.agent.md  dftracer-validate-c.agent.md  dftracer-validate-cpp.agent.md  dftracer-validate-python.agent.md
.goose/: README.md  config.yaml  lessons-learned.md
.goose/hints/: 00-critical-cheatsheet.md  01-annotation-rules-c.md  01-annotation-rules-cpp.md  01-annotation-rules-general.md  01-annotation-rules-python.md  02-annotation-pitfalls.md  03-annotation-process.md  04-smoke-test-rules.md  05-planning-progress.md  06-build-run-iteration.md  07-references-logging.md  08-install-rules.md  09-lessons-learned-cache.md  10-io-optimization-papers.md  11-autotools-dftracer-integration.md
.opencode/: opencode.jsonc
dftracer-agents/: __init__.py  dftracer_mcp_server.sh  mcp_server.py  mcp_setup.py  run-pipeline.sh  run_mcp_service.py  skills.py  start-mcp-server.sh
dftracer-agents/mcp-tools/: __init__.py  mcp_service_factory.py
dftracer-agents/recipes/: _inc-opt-context.inc  _inc-report.inc  _inc-top.inc  _inc-write.inc  annotate-c.yaml  annotate-cpp.yaml  annotate-python.yaml  optimize-l1-app.yaml  optimize-l2-software.yaml  optimize-l3-system.yaml  optimize.yaml  pipeline.yaml
dftracer_agents.egg-info/: entry_points.txt
docker/: Caddyfile  Dockerfile  Dockerfile.mcp
docs/: conf.py  docker.rst  harness-agents.md  harnesses.rst  index.rst  install.rst  models.rst  pipeline.md  pipeline.rst  profiling.rst  run.rst  tools.rst
graphify-out/: manifest.json
opencode/: README.md  opencode.jsonc  set-models.sh
opencode/agents-template/: dftracer-pipeline.md
opencode/commands/: dftracer-pipeline.md
scripts/: claude  migrate_agents_to_yaml.py  run_session.py  sandbox_goose.sh
scripts/sandbox/: sandbox-config.yaml
src/dftracer_agents/: __init__.py  agent_templates.py  agents.py  bootstrap.py  dftracer_agents_stack  dftracer_mcp_server.sh  env_setup.py  harness_models.py  mcp_server.py  mcp_setup.py  privacy.py  run-pipeline.sh  skills.py  stack.py
test/: _mcp_repl_analyzer_server.py  _mcp_repl_both_server.py  conftest.py  mcp_agent.py  mcp_integration_server.py  mcp_repl.py  openai_client_config.json  test_academic_service.py  test_agent_templates.py  test_dfanalyzer_service.py  test_dfdiagnoser_service.py  test_dftracer_plot_service.py  test_dftracer_session_service.py  test_dftracer_utils_mcp_stdio_integration.py  test_dftracer_utils_mcp_tools.py  test_session_new_tools.py  test_session_refactor.py
(+466 files in other folders)
