[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dftracer-agents"
version = "0.1.0"
description = "DFTracer MCP Services for Dataflow Analysis"
requires-python = ">=3.9"
dependencies = [
    "fastmcp>=0.1.0",
    "dftracer-utils @ git+https://github.com/llnl/dftracer-utils.git@develop",
    "dftracer-analyzer @ git+https://github.com/llnl/dfanalyzer.git@develop",
    "dfdiagnoser @ git+https://github.com/llnl/DFDiagnoser.git@main",
    "libclang>=18.1.0",
    "matplotlib",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
]
profile = [
    "mlflow",
]

[project.scripts]
dftracer-mcp-server     = "dftracer_agents.mcp_server:main"
dftracer-configure-mcp  = "dftracer_agents.mcp_setup:main"
dftracer-install-skills = "dftracer_agents.skills:main"
dftracer-install-agents = "dftracer_agents.agents:main"
dftracer-bootstrap-workspace = "dftracer_agents.bootstrap:main"
dftracer-configure-harness = "dftracer_agents.harness_models:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dftracer_agents" = [
    ".agents/skills/**/*.md",
    ".agents/agents/*.md",
    ".agents/workspace/**/*.md",
    ".agents/workspace/**/*.json",
    ".agents/workspace/**/*.jsonc",
    ".agents/workspace/.claude/*.json",
    ".agents/workspace/.opencode/*.jsonc",
    ".agents/workspace/.vscode/*.json",
    "*.sh",
]
